apps/infrastructure/wg-easy/resources/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-web
  namespace: wg-easy
spec:
  selector:
    app: wg-easy
  ports:
    - name: http
      port: 51821
      targetPort: 51821
      protocol: TCP
  type: ClusterIP
